--- a/src/components/Row/Row.css
+++ b/src/components/Row/Row.css
@@ -18,7 +18,7 @@
     object-fit: contain;
     width: 100%;
 
-    max-height: 10000px;
+    max-height: 100px;
     margin-right: 15px;
     transition: transform 450ms;
 
@@ -27,4 +27,7 @@
 .row_poster:hover {
     transform: scale(1.09);
 
+}
+.row_posterLarge {
+    max-height: 350px;
 }
