--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -46,8 +46,7 @@ padding-bottom: 0.5rem;
     background-color: #e6e6e6;
     transition: all 0.2s;
 }
-.banner--fadeBottom{
-
+.banner_fadeBottom{
     height: 7.4rem;
     background-image: linear-gradient(
         180deg,
@@ -55,5 +54,4 @@ padding-bottom: 0.5rem;
         rgba(37,37,37,0.61)
         #111
     );
-
 }
