--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,11 +1,13 @@
 .nav{
     position: fixed;
-    top: 0;
+    top: 0px;
     width: 100%;
     padding: flex;
+    height: 30px;
 
     display: flex;
     justify-content: space-between;
+    background-color: #111;
 }
 .nav_logo{
     position: fixed;
