--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -7,8 +7,12 @@
 
     display: flex;
     justify-content: space-between;
+}
+
+.nav_black {
     background-color: #111;
 }
+
 .nav_logo{
     position: fixed;
     left: 20px;
