--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,12 +1,14 @@
 .nav{
     position: fixed;
-    top: 0px;
+    top: 0;
     width: 100%;
-    padding: flex;
+    padding: 20px;
     height: 30px;
+    z-index: 1;
 
-    display: flex;
-    justify-content: space-between;
+    transition-timing-function: ease-in;
+    transition: all 0.5s;
+    
 }
 
 .nav_black {
