--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -46,12 +46,9 @@ padding-bottom: 0.5rem;
     background-color: #e6e6e6;
     transition: all 0.2s;
 }
+
 .banner_fadeBottom{
     height: 7.4rem;
-    background-image: linear-gradient(
-        180deg,
-        transparent,
-        rgba(37,37,37,0.61)
-        #111
+    background-image: linear-gradient(180deg, transparent, rgba(37,37,37,0.61),#111
     );
 }
